Got textbooks loading and querying from the database fully setup

--- a/Web/app/templates/base.html
+++ b/Web/app/templates/base.html
@@ -5,6 +5,8 @@
     {% else %}
     <title>Dog SVStore</title>
     {% endif %}
+        <script type=text/javascript src="{{
+  url_for('static', filename='jquery.js') }}"></script>
   </head>
   <body>
     <div>Dog SVStore: <a href="/index">Home</a></div>
