--- a/Web/app/templates/base.html
+++ b/Web/app/templates/base.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     {% if title %}
-      <title>{{ title }} - Dog SVStore</title>
+      <title>{{ title }} - SVStore</title>
     {% else %}
-      <title>Dog SVStore</title>
+      <title>SVStore</title>
     {% endif %}
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
@@ -20,7 +20,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Logo</a>
+          <a class="navbar-brand" href="index">Logo</a>
         </div>
         <div class="collapse navbar-collapse" id="nav">
           <ul class="nav navbar-nav">
@@ -58,12 +58,12 @@
   </body>
   <footer class="footer">
    <p class="alignleft">
-    <a href="about">About</a>
+    <a href="about">About</a> | 
     <a href="docs">Documentation</a>
    </p>
    <p class="alignright">
-    <a href="library">Library</a>
-    <a href="builder">Build</a>
+    <a href="library">Library</a> | 
+    <a href="builder">Build</a> | 
     <a href="query">Query</a>
    </p>
   </footer>
