--- a/Web/app/templates/query.html
+++ b/Web/app/templates/query.html
@@ -1,11 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
+	<style>
+		*{
+		    padding: 0;
+		    margin:0;
+		}
+		.wrapper{
+		    border: 1px solid #9D9D9D;
+		    width: 100%;
+		}
+		.wrapper textarea{
+		    width:100%;
+		    resize: none;
+		}
+		.wrapper textarea:focus{
+		    outline: none;
+		}
+		.controls{
+		    text-align: right;
+		   
+		}
+	</style>
 
 	<form action="" method="post" name="record">
 		<h1>Query</h1>
-		<p>
+		<div class="wrapper">
 			{{ form.query(style="width:100%;height:75%;") }}
-		</p>
-		<p><input type="submit" value="Query" id="submit" name="submit"></p>
+			<div class="controls">
+				<input type="submit" value="Query" id="submit" name="submit" class="btn btn-primary">
+			</div>
+		</div>
 	</form>
  {% endblock %}
