Switched querying to joins instead of subquerys, and added Ace integration for syntax highliting
Ace is not completely done, information does not get pushed to requests
yet. It’s fairly close to working though.

--- a/Web/app/static/style.css
+++ b/Web/app/static/style.css
@@ -26,15 +26,15 @@ th, td {
 	text-align: left;
 }
 table tr:nth-child(even) {
-	background-color: #eee;
+	background-color: #9D9D9D;
 }		
 table tr:nth-child(odd) {
 	background-color: #fff;
 }
 table th {
 	color: white;
-	background-color: black;
-}
+	background-color: 222222;
+} 
 
 /* Set black background color, white text and some padding */
 footer {
@@ -175,3 +175,4 @@ h1 button{
 .panel-title > a:hover{
 	color:#9D9D9D;
 }
+
