--- a/Web/app/templates/builder.html
+++ b/Web/app/templates/builder.html
@@ -1,76 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <script type="text/javascript">
-    function move_selected(from, to) {
-      return !$(from + ' option:selected').remove().appendTo(to);
-    };
-
-    function select_all(box) {
-      return !$(box + ' option').prop('selected', true);
-    }
-
-    $(document).ready( function() {
-      $('#form-breed_exclude').dblclick( function(){
-        move_selected('#form-breed_exclude', '#form-breed_include')
-      });
-      $('#form-breed_include').dblclick( function(){
-        move_selected('#form-breed_include', '#breed_exclude')
-      });
-      $('#form-sample_exclude').dblclick( function(){
-        move_selected('#form-sample_exclude', '#form-sample_include')
-      });
-      $('#form-sample_include').dblclick( function(){
-        move_selected('#form-sample_include', '#form-sample_exclude')
-      });
-      $('#form-tool_exclude').dblclick( function(){
-        move_selected('#form-tool_exclude', '#form-tool_include')
-      });
-      $('#form-tool_include').dblclick( function(){
-        move_selected('#form-tool_include', '#form-tool_exclude')
-      });
-      $('#form-region_exclude').dblclick( function(){
-        move_selected('#form-region_exclude', '#form-region_include')
-      });
-      $('#form-region_include').dblclick( function(){
-        move_selected('#form-region_include', '#form-region_exclude')
-      });
-
-      $('#submit').click(function(){
-        select_all('#form-breed_include');
-        select_all('#form-sample_include');
-        select_all('#form-tool_include');
-        select_all('#cols-records_include');
-        select_all('#cols-samples_include');
-        select_all('#cols-genotypes_include');
-      });
-      $('#cols-records_exclude').dblclick( function(){move_selected('#cols-records_exclude', '#cols-records_include')} );
-      $('#cols-records_include').dblclick( function(){move_selected('#cols-records_include', '#cols-records_exclude')} );
-      $('#cols-samples_exclude').dblclick( function(){move_selected('#cols-samples_exclude', '#cols-samples_include')} );
-      $('#cols-samples_include').dblclick( function(){move_selected('#cols-samples_include', '#cols-samples_exclude')} );
-      $('#cols-genotypes_exclude').dblclick( function(){move_selected('#cols-genotypes_exclude', '#cols-genotypes_include')} );
-      $('#cols-genotypes_include').dblclick( function(){move_selected('#cols-genotypes_include', '#cols-genotypes_exclude')} );
-      $('#openModal').click(function() {
-        chooseCols.style.display = "block";
-      });
-      $('#closeModal').click(function() {
-        chooseCols.style.display = "none";
-      });
-      $('#add').click(function() {
-        if (document.getElementById('chrom').value.length > 0 & document.getElementById('start').value.length > 0 & document.getElementById('end').value.length > 0) {
-          if (document.getElementById('isSecond').checked){
-            region = "chrom2 = " + document.getElementById('chrom').value + " and pos2 between " + document.getElementById('start').value + " and " + document.getElementById('end').value
-          } else {
-            region = "chrom = " + document.getElementById('chrom').value + " and pos between " + document.getElementById('start').value + " and " + document.getElementById('end').value
-          }
-          document.getElementById('chrom').value = ""
-          document.getElementById('start').value = ""
-          document.getElementById('end').value = ""
-          return $('#form-region_include').append("<option value=" + region + ">" + region + "</option>")
-        }
-      });
-    });
-  </script>
   <h1>Builder <button id="openModal" type="button" class="btn btn-primary">Columns</button></h1>
   <!-- Trigger/Open The Modal -->
   <hr>
@@ -141,13 +71,45 @@
           </h4>
         </div>
         <div id="Record" class="panel-collapse collapse">
-          <p>
-            Length: {{ form.len(size=8) }}
-          </p>
-          <p>
-            Filter: {{ form.filter(size=20) }}
-          </p>
-          <p><center>{{ form.DEL }} DEL {{ form.DUP }} DUP {{ form.INS }} INS {{ form.INV }} INV {{ form.TRA }} TRA {{ form.SIN }} SIN {{ form.LIN }} LIN {{ form.BXP }} BXP</center></p>
+          <div class="row" style="padding:10px;">
+            <div class="col-sm-4">
+              <p>{{ form.homref }} Homozygous Reference</p>
+              <p>{{ form.homalt }} Homozygous Alternate</p>
+              <p>{{ form.het }} Heterozygous</p>
+            </div>
+            <div class="col-sm-4">
+              <p>{{ form.DEL }} DEL</p>
+              <p>{{ form.DUP }} DUP</p>
+              <p>{{ form.INS }} INS</p>
+              <p>{{ form.INV }} INV</p>
+              <p>{{ form.TRA }} TRA</p>
+              <p>{{ form.SIN }} SIN</p>
+              <p>{{ form.LIN }} LIN</p> 
+              <p>{{ form.BXP }} BXP</p>
+            </div>
+            <div class="col-sm-4">
+              <div class="alignright">
+                <p class="alignright">
+                  Ref: {{ form.ref(size=20) }}
+                </p><br>
+                <p class="alignright">
+                  Alt: {{ form.alt(size=20) }}
+                </p><br>
+                <p class="alignright">
+                  Qual: {{ form.qual(size=20) }}
+                </p><br>
+                <p class="alignright">
+                  Length: {{ form.len(size=20) }}
+                </p><br>
+                <p class="alignright">
+                  Filter: {{ form.filter(size=20) }}
+                </p><br>
+              </div>
+            </div>
+          </div>
+          
+          
+          
         </div>
       </div>
     </div>
@@ -169,9 +131,11 @@
               <p> {{form.region_include(style="width:100%;height:100px;")}}</p>
             </div>
             <div class="col-sm-4">
-              <p class="alignright">Chrom: <input type="text" id="chrom"></p>
-              <p class="alignright">Start: <input type="text" id="start"></p>
+              <div class="alignright">
+              <p class="alignright">Chrom: <input type="text" id="chrom"></p><br>
+              <p class="alignright">Start: <input type="text" id="start"></p><br>
               <p class="alignright">End: <input type="text" id="end"></p><br>
+              </div>
               <p>Chrom 2 <input type="checkbox" name="isSecond" id="isSecond"></p><br>
               
               <input type="button" value="Add" id="add" name="add" class="btn btn-primary">
@@ -254,4 +218,60 @@
     </div>
     <p><input type="submit" value="Query" id="submit" name="submit" class="btn btn-primary"></p>
   </form>
+  <script type="text/javascript">
+    function move_selected(from, to) {
+      return !$(from + ' option:selected').remove().appendTo(to);
+    };
+
+    function select_all(box) {
+      return !$(box + ' option').prop('selected', true);
+    }
+
+    $(document).ready( function() {
+      $('#form-breed_exclude').dblclick( function(){move_selected('#form-breed_exclude', '#form-breed_include')});
+      $('#form-breed_include').dblclick( function(){move_selected('#form-breed_include', '#breed_exclude')});
+      $('#form-sample_exclude').dblclick( function(){move_selected('#form-sample_exclude', '#form-sample_include')});
+      $('#form-sample_include').dblclick( function(){move_selected('#form-sample_include', '#form-sample_exclude')});
+      $('#form-tool_exclude').dblclick( function(){move_selected('#form-tool_exclude', '#form-tool_include')});
+      $('#form-tool_include').dblclick( function(){move_selected('#form-tool_include', '#form-tool_exclude')});
+      $('#form-region_exclude').dblclick( function(){move_selected('#form-region_exclude', '#form-region_include')});
+      $('#form-region_include').dblclick( function(){move_selected('#form-region_include', '#form-region_exclude')});
+
+      $('#submit').click(function(){
+        select_all('#form-breed_include');
+        select_all('#form-sample_include');
+        select_all('#form-tool_include');
+        select_all('#form-region_include');
+        select_all('#cols-records_include');
+        select_all('#cols-samples_include');
+        select_all('#cols-genotypes_include');
+      });
+
+      $('#cols-records_exclude').dblclick( function(){move_selected('#cols-records_exclude', '#cols-records_include')} );
+      $('#cols-records_include').dblclick( function(){move_selected('#cols-records_include', '#cols-records_exclude')} );
+      $('#cols-samples_exclude').dblclick( function(){move_selected('#cols-samples_exclude', '#cols-samples_include')} );
+      $('#cols-samples_include').dblclick( function(){move_selected('#cols-samples_include', '#cols-samples_exclude')} );
+      $('#cols-genotypes_exclude').dblclick( function(){move_selected('#cols-genotypes_exclude', '#cols-genotypes_include')} );
+      $('#cols-genotypes_include').dblclick( function(){move_selected('#cols-genotypes_include', '#cols-genotypes_exclude')} );
+      $('#openModal').click(function() {
+        chooseCols.style.display = "block";
+      });
+      $('#closeModal').click(function() {
+        chooseCols.style.display = "none";
+      });
+      $('#add').click(function() {
+        if (document.getElementById('chrom').value.length > 0 & document.getElementById('start').value.length > 0 & document.getElementById('end').value.length > 0) {
+          if (document.getElementById('isSecond').checked){
+            region = "chrom2 is " + document.getElementById('chrom').value + " and pos2 between " + document.getElementById('start').value + " and " + document.getElementById('end').value
+          } else {
+            region = "chrom is " + document.getElementById('chrom').value + " and pos between " + document.getElementById('start').value + " and " + document.getElementById('end').value
+          }
+          document.getElementById('chrom').value = ""
+          document.getElementById('start').value = ""
+          document.getElementById('end').value = ""
+          return $('#form-region_include').append("<option value=" + region + ">" + region + "</option>")
+        }
+      });
+    });
+  </script>
 {% endblock %}
