--- a/Web/app/templates/query.html
+++ b/Web/app/templates/query.html
@@ -6,12 +6,13 @@
 		    margin:0;
 		}
 		.wrapper{
-		    border: 1px solid #9D9D9D;
+		    border: 2px solid #9D9D9D;
 		    width: 100%;
 		}
 		.wrapper textarea{
 		    width:100%;
 		    resize: none;
+		    border: none;
 		}
 		.wrapper textarea:focus{
 		    outline: none;
@@ -20,15 +21,37 @@
 		    text-align: right;
 		   
 		}
+		#editor {
+    		position: relative;
+    		border-bottom: 2px solid #9D9D9D;
+    		height:75%;
+    		width: 100%;
+		}
 	</style>
+	
 
 	<form action="" method="post" name="record">
 		<h1>Query</h1>
 		<div class="wrapper">
-			{{ form.query(style="width:100%;height:75%;") }}
+			<div id="editor"></div>
 			<div class="controls">
 				<input type="submit" value="Query" id="submit" name="submit" class="btn btn-primary">
 			</div>
 		</div>
 	</form>
+	<script src="//ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+	<script>
+		var editor = ace.edit("editor");
+		editor.getSession().setUseWorker(false);
+		editor.setTheme("ace/theme/textmate");
+		editor.getSession().setMode("ace/mode/sql");
+
+	    $(document).ready( function() {
+	      $('#submit').click(function(){
+	        editor.getValue();
+	      });
+
+	    });
+
+	</script>
  {% endblock %}
