--- a/Web/app/templates/results.html
+++ b/Web/app/templates/results.html
@@ -1,5 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
+	<style>
+		#editor {
+    		position: relative;
+    		border: 2px solid #9D9D9D;
+    		height:100px;
+    		width: 100%;
+		}
+	</style>
+	<h2>Results:</h2>
+	<div id="editor">{{ query }}</div>
+	<script src="//ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+	<script>
+		var editor = ace.edit("editor");
+		editor.getSession().setUseWorker(false);
+		editor.setTheme("ace/theme/textmate");
+		editor.getSession().setMode("ace/mode/sql");
+	</script>
+	<hr>
 	<table >
 		<tr>
 			{% for h in fields %}
