--- a/Web/app/static/style.css
+++ b/Web/app/static/style.css
@@ -13,6 +13,15 @@
 	height: auto;
 }
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 50px;
+}
+
 
 table {
 	width:100%;
@@ -41,11 +50,10 @@ footer {
 	background: #222222;
 	color: white;
 	padding: 15px;
-	position:fixed;
-	left:0px;
-	bottom:0px;
+	position: absolute;
+  	bottom: 0;
+  	width: 100%;
 	height:50px;
-	width:100%;
 } 
 
 wrapper {
@@ -145,6 +153,10 @@ wrapper {
     box-shadow: none;
 }
 
+.btn.sharp {
+  border-radius:0;
+}
+
 a {
 	color:#9D9D9D;
 }
@@ -175,4 +187,41 @@ h1 button{
 .panel-title > a:hover{
 	color:#9D9D9D;
 }
+
+.wrapper{
+    border: 2px solid #9D9D9D;
+    width: 100%;
+}
+.wrapper textarea{
+    width:0px;
+    height:0px;
+    resize: none;
+    border: none;
+}
+
+.controls{
+    text-align: right;
+   
+}
+#editor {
+	position: relative;
+	border-bottom: 2px solid #9D9D9D;
+	height:75%;
+	width: 100%;
+}
+
+input[type="checkbox"] {
+    display:none;
+    display:inline-block;
+    width:19px;
+    height:19px;
+    margin:-1px 4px 0 0;
+    vertical-align:middle;
+    background:url(check_radio_sheet.png) left top no-repeat;
+    cursor:pointer;
+}
+input[type="checkbox"]:checked{
+    background:url(check_radio_sheet.png) -19px top no-repeat;
+}
+
 
