--- a/Web/app/templates/query.html
+++ b/Web/app/templates/query.html
@@ -5,37 +5,14 @@
 		    padding: 0;
 		    margin:0;
 		}
-		.wrapper{
-		    border: 2px solid #9D9D9D;
-		    width: 100%;
-		}
-		.wrapper textarea{
-		    width:100%;
-		    resize: none;
-		    border: none;
-		}
-		.wrapper textarea:focus{
-		    outline: none;
-		}
-		.controls{
-		    text-align: right;
-		   
-		}
-		#editor {
-    		position: relative;
-    		border-bottom: 2px solid #9D9D9D;
-    		height:75%;
-    		width: 100%;
-		}
 	</style>
-	
-
 	<form action="" method="post" name="record">
 		<h1>Query</h1>
 		<div class="wrapper">
-			<div id="editor"></div>
+			<div id="editor">{{query}}</div>
+			{{form.input_query}}
 			<div class="controls">
-				<input type="submit" value="Query" id="submit" name="submit" class="btn btn-primary">
+				<input type="submit" value="Query" id="submit" name="submit" class="btn btn-primary sharp">
 			</div>
 		</div>
 	</form>
@@ -45,10 +22,11 @@
 		editor.getSession().setUseWorker(false);
 		editor.setTheme("ace/theme/textmate");
 		editor.getSession().setMode("ace/mode/sql");
+		editor.value = document.getElementById('input_query').value;
 
 	    $(document).ready( function() {
 	      $('#submit').click(function(){
-	        editor.getValue();
+	        document.getElementById('input_query').value = editor.getValue();
 	      });
 
 	    });
