--- a/Web/app/templates/results.html
+++ b/Web/app/templates/results.html
@@ -2,20 +2,39 @@
 {% block content %}
 	<style>
 		#editor {
-    		position: relative;
-    		border: 2px solid #9D9D9D;
     		height:100px;
     		width: 100%;
 		}
+		*{
+		    padding: 0;
+		    margin:0;
+		}
 	</style>
 	<h2>Results:</h2>
-	<div id="editor">{{ query }}</div>
+	<form action="" method="post" name="record">
+		<h1>Query</h1>
+		<div class="wrapper">
+			<div id="editor">{{query}}</div>
+			{{form.input_query}}
+			<div class="controls">
+				<input type="submit" value="Query" id="submit" name="submit" class="btn btn-primary sharp">
+			</div>
+		</div>
+	</form>
 	<script src="//ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 	<script>
 		var editor = ace.edit("editor");
 		editor.getSession().setUseWorker(false);
 		editor.setTheme("ace/theme/textmate");
 		editor.getSession().setMode("ace/mode/sql");
+
+	    $(document).ready( function() {
+	      $('#submit').click(function(){
+	        document.getElementById('input_query').value = editor.getValue();
+	      });
+
+	    });
+
 	</script>
 	<hr>
 	<table >
