--- a/Web/app/templates/base.html
+++ b/Web/app/templates/base.html
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index"> <img src= {{ url_for('static', filename ='logo.png') }} width="25"></a>
+          <a class="navbar-brand" href="{{url_for('index')}}"> <img src= {{ url_for('static', filename ='logo.png') }} width="25"></a>
         </div>
         <div class="collapse navbar-collapse" id="nav">
           <ul class="nav navbar-nav">
