Tool filters can now switch between info and sample tables

--- a/Web/app/static/style.css
+++ b/Web/app/static/style.css
@@ -227,20 +227,21 @@ input[type="checkbox"] {
 input[type="checkbox"]:checked{
     background:url(check_radio_sheet.png) -19px top no-repeat;
 }
-.operators {
+.selector {
+
      list-style-type:none;
      margin:25px 0 0 0;
      padding:0;
 }
 
-.operators li {
+.selector li {
     margin:5px;
     width:100px;
     height:40px;
     position:relative;
 }
 
-.operators label, .operators input {
+.selector label, .selector input {
     display:block;
     position:absolute;
     top:0;
@@ -249,23 +250,23 @@ input[type="checkbox"]:checked{
     bottom:0;
 }
 
-.operators input[type="radio"] {
+.selector input[type="radio"] {
     opacity:0.011;
     z-index:100;
 }
 
-.operators input[type="radio"]:checked + label {
+.selector input[type="radio"]:checked + label {
     background:#D2D2D2;
 }
 
-.operators label {
+.selector label {
      padding:5px;
      border:1px solid #CCC; 
      cursor:pointer;
     z-index:90;
 }
 
-.operators label:hover {
+.selector label:hover {
      background:#DDD;
 }
 
